linear regression reviewed

--- a/tensorflow_basics.ipynb
+++ b/tensorflow_basics.ipynb
@@ -4,312 +4,388 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tensor properties - ranks, shapes, and types"
+    "# Creating my first graph and running it in a session"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tensor rank"
+    "The following code creates the graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "x = tf.Variable(3, name=\"x\")\n",
+    "y = tf.Variable(4, name=\"y\")\n",
+    "f = x*x*y + y + 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code does not actually perform any computation. In fact, even the variables are not initialized yet. To evaluate this graph, you need to open a TensorFlow _session_ and use it to initialize the variables and evaluate **f**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "sess = tf.Session()\n",
+    "sess.run(x.initializer)\n",
+    "sess.run(y.initializer)\n",
+    "result = sess.run(f)\n",
+    "print (result)\n",
+    "sess.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Having to repeat `sess.run()` all the time is a bit cumbersome. Here is the better way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    x.initializer.run()\n",
+    "    y.initializer.run()\n",
+    "    result = f.eval()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of manually running the initializer for every single variable, you can use the `global_variables_initializer()` function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "tens1 = tf.constant([[[1,2],[2,3]],[[3,4],[5,6]]]) # rank 3 tensor\n",
-    "sess = tf.Session()\n",
-    "print (sess.run(tens1)[1,1,0]) # address an element with t[i,j,k]"
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    init.run() # actually initializer all the variables\n",
+    "    result = f.eval()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating new tensors"
+    "Inside Jupyter, you may prefer to create an `InteractiveSession`. It automatically sets itself as the default session, so you don't need a with block ( but need to close the session manually)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.06694089  0.40704554  0.07729915  0.08474851  0.68321675  0.96644491\n",
-      "  0.97236317  0.4506973   0.65744954  0.73222774  0.35651681  0.21367987\n",
-      "  0.27190179  0.35362628  0.40827733  0.02435885  0.25420827  0.85115719\n",
-      "  0.66028023  0.69981909  0.08555209  0.18893756  0.06223164  0.78673637\n",
-      "  0.96470618  0.94901669  0.51365107  0.76844889  0.8611604   0.21485953\n",
-      "  0.88984179  0.19638985]\n",
-      "[1 2 3]\n"
+      "42\n"
      ]
     }
    ],
    "source": [
+    "sess = tf.InteractiveSession()\n",
+    "init.run()\n",
+    "result = f.eval()\n",
+    "print(result)\n",
+    "sess.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A TensorFlow program is typically split into two parts: \n",
+    "\n",
+    "1. Building a computation graph, called the *construction phase*\n",
+    "2. Running it, *the execution phase*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "# The first part: the construction phase\n",
+    "x = tf.Variable(3, name=\"x\")\n",
+    "y = tf.Variable(4, name=\"y\")\n",
+    "f = x*x*y + y + 2\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "# The second part: the execution phase\n",
+    "with tf.Session() as sess:\n",
+    "    init.run() \n",
+    "    result = f.eval()\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Managing Graphs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Any node you create is automatically added to the default graph:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1 = tf.Variable(1)\n",
+    "x1.graph is tf.get_default_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can manage multiple independent graphs by creating a new `Graph` and temporarily making it the default graph inside a `with` block, like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "    x2 = tf.Variable(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2.graph is graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2.graph is tf.get_default_graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lifecycle of a Node Value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A variable starts its life when its initializer is run, and it ends when the session is closed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = tf.constant(3)\n",
+    "x = w + 2\n",
+    "y = x + 5 # y depends on x, which depends on w:  w -> x -> y\n",
+    "z = x * 3 \n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    print(y.eval())\n",
+    "    print(z.eval())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To evaluate y and z efficiently, w/o evaluating w and x twice as in the previous code, you must ask TensorFlow to evaluate both y and z in just one graph run, as shown in the following code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    y_val, z_val = sess.run([y, z])\n",
+    "    print(y_val)\n",
+    "    print(z_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Linear Regression with Tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# It starts by fetching the dataset\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "x = tf.constant(np.random.rand(32), dtype = tf.float32) # generate rank 1 tensor which has 32 random numbers\n",
-    "y = tf.constant([1,2,3])\n",
+    "from sklearn.datasets import fetch_california_housing\n",
     "\n",
-    "sess = tf.Session()\n",
+    "# Adding an extra bias input feature (x0 = 1) to all training instances\n",
+    "housing = fetch_california_housing()\n",
+    "m, n = housing.data.shape # (20640, 8)\n",
+    "housing_data_plus_bias = np.c_[np.ones((m, 1)), housing.data] # (20640, 9)\n",
     "\n",
-    "print(sess.run(x))\n",
-    "print(sess.run(y))"
+    "# Creating two TensorFlow constant nodes, X and y\n",
+    "X = tf.constant(housing_data_plus_bias, dtype=tf.float32, name=\"X\") # (20640, 9)\n",
+    "y = tf.constant(housing.target.reshape(-1, 1), dtype=tf.float32, name='y') # (20640, 1)\n",
+    "XT = tf.transpose(X)\n",
+    "theta = tf.matmul(tf.matmul(tf.matrix_inverse(tf.matmul(XT, X)), XT), y) # Review: The Normal Equation\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    theta_value = theta.eval()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## From numpy to tensors and vice versa"
+    "### Review: The Normal Equation\n",
+    "\n",
+    "A mathematical equation that gives the result directly\n",
+    "\n",
+    "$$ \\hat{\\theta} = (\\mathbf{X^T} \\cdot  \\mathbf{X})^{-1} \\cdot \\mathbf{X^T} \\cdot y $$\n",
+    "\n",
+    "* $\\hat{\\theta}$ is the value of $\\theta$ that minimizes the cost function.\n",
+    "* $y$ is the vector of target values containing $y^{(1)}$ to $y^{(m)}$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### tf.convert_to_tensor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.  2.  3.]\n",
-      " [ 3.  2.  6.]]\n",
-      "Tensor(\"Const_25:0\", shape=(2, 3), dtype=float32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "\n",
-    "sess = tf.Session()\n",
-    "\n",
-    "x_data = np.array([[1,2,3],\n",
-    "                   [3,2,6]])\n",
-    "\n",
-    "x = tf.convert_to_tensor(x_data, dtype=tf.float32)\n",
-    "\n",
-    "print(sess.run(x))\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Graph building"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "node {\n",
-      "  name: \"zeros\"\n",
-      "  op: \"Const\"\n",
-      "  attr {\n",
-      "    key: \"dtype\"\n",
-      "    value {\n",
-      "      type: DT_FLOAT\n",
-      "    }\n",
-      "  }\n",
-      "  attr {\n",
-      "    key: \"value\"\n",
-      "    value {\n",
-      "      tensor {\n",
-      "        dtype: DT_FLOAT\n",
-      "        tensor_shape {\n",
-      "          dim {\n",
-      "            size: 10\n",
-      "          }\n",
-      "          dim {\n",
-      "            size: 5\n",
-      "          }\n",
-      "        }\n",
-      "        float_val: 0.0\n",
-      "      }\n",
-      "    }\n",
-      "  }\n",
-      "}\n",
-      "node {\n",
-      "  name: \"Variable\"\n",
-      "  op: \"VariableV2\"\n",
-      "  attr {\n",
-      "    key: \"container\"\n",
-      "    value {\n",
-      "      s: \"\"\n",
-      "    }\n",
-      "  }\n",
-      "  attr {\n",
-      "    key: \"dtype\"\n",
-      "    value {\n",
-      "      type: DT_FLOAT\n",
-      "    }\n",
-      "  }\n",
-      "  attr {\n",
-      "    key: \"shape\"\n",
-      "    value {\n",
-      "      shape {\n",
-      "        dim {\n",
-      "          size: 10\n",
-      "        }\n",
-      "        dim {\n",
-      "          size: 5\n",
-      "        }\n",
-      "      }\n",
-      "    }\n",
-      "  }\n",
-      "  attr {\n",
-      "    key: \"shared_name\"\n",
-      "    value {\n",
-      "      s: \"\"\n",
-      "    }\n",
-      "  }\n",
-      "}\n",
-      "node {\n",
-      "  name: \"Variable/Assign\"\n",
-      "  op: \"Assign\"\n",
-      "  input: \"Variable\"\n",
-      "  input: \"zeros\"\n",
-      "  attr {\n",
-      "    key: \"T\"\n",
-      "    value {\n",
-      "      type: DT_FLOAT\n",
-      "    }\n",
-      "  }\n",
-      "  attr {\n",
-      "    key: \"_class\"\n",
-      "    value {\n",
-      "      list {\n",
-      "        s: \"loc:@Variable\"\n",
-      "      }\n",
-      "    }\n",
-      "  }\n",
-      "  attr {\n",
-      "    key: \"use_locking\"\n",
-      "    value {\n",
-      "      b: true\n",
-      "    }\n",
-      "  }\n",
-      "  attr {\n",
-      "    key: \"validate_shape\"\n",
-      "    value {\n",
-      "      b: true\n",
-      "    }\n",
-      "  }\n",
-      "}\n",
-      "node {\n",
-      "  name: \"Variable/read\"\n",
-      "  op: \"Identity\"\n",
-      "  input: \"Variable\"\n",
-      "  attr {\n",
-      "    key: \"T\"\n",
-      "    value {\n",
-      "      type: DT_FLOAT\n",
-      "    }\n",
-      "  }\n",
-      "  attr {\n",
-      "    key: \"_class\"\n",
-      "    value {\n",
-      "      list {\n",
-      "        s: \"loc:@Variable\"\n",
-      "      }\n",
-      "    }\n",
-      "  }\n",
-      "}\n",
-      "node {\n",
-      "  name: \"Placeholder\"\n",
-      "  op: \"Placeholder\"\n",
-      "  attr {\n",
-      "    key: \"dtype\"\n",
-      "    value {\n",
-      "      type: DT_FLOAT\n",
-      "    }\n",
-      "  }\n",
-      "  attr {\n",
-      "    key: \"shape\"\n",
-      "    value {\n",
-      "      shape {\n",
-      "        dim {\n",
-      "          size: -1\n",
-      "        }\n",
-      "        dim {\n",
-      "          size: 10\n",
-      "        }\n",
-      "      }\n",
-      "    }\n",
-      "  }\n",
-      "}\n",
-      "node {\n",
-      "  name: \"MatMul\"\n",
-      "  op: \"MatMul\"\n",
-      "  input: \"Placeholder\"\n",
-      "  input: \"Variable/read\"\n",
-      "  attr {\n",
-      "    key: \"T\"\n",
-      "    value {\n",
-      "      type: DT_FLOAT\n",
-      "    }\n",
-      "  }\n",
-      "  attr {\n",
-      "    key: \"transpose_a\"\n",
-      "    value {\n",
-      "      b: false\n",
-      "    }\n",
-      "  }\n",
-      "  attr {\n",
-      "    key: \"transpose_b\"\n",
-      "    value {\n",
-      "      b: false\n",
-      "    }\n",
-      "  }\n",
-      "}\n",
-      "versions {\n",
-      "  producer: 22\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "\n",
-    "g = tf.Graph()\n",
-    "with g.as_default():\n",
-    "    \n",
-    "    sess =tf.Session()\n",
-    "    W_m = tf.Variable(tf.zeros([10,5]))\n",
-    "    x_v = tf.placeholder(tf.float32, [None, 10])\n",
-    "    result = tf.matmul(x_v, W_m)\n",
-    "    print (g.as_graph_def())"
+    "### NumPy vs. TensorFlow: The main benefit\n",
+    "TensorFlow will automatically run this on your GPU card"
    ]
   },
   {
@@ -338,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
