more tensorflow_basics.ipynb

--- a/tensorflow_basics.ipynb
+++ b/tensorflow_basics.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "False"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -342,8 +342,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# It starts by fetching the dataset\n",
@@ -389,13 +391,215 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "# Implementing Gradient Descent\n",
+    "\n",
+    "Using Batch Gradient Descent instead of the Normal Equation, we will do this:\n",
+    "\n",
+    "1. by manually computing the gradients\n",
+    "2. by using TensorFlow's autodiff feature\n",
+    "3. by using Tensorflow's out-of-the-box optimizers\n",
+    "\n",
+    "**important notes: normalize the input feature vectors first**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Manually Computing the Gradient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Normalize the feature vector: scaled_housing_data_plus_bias\n",
+    "from sklearn import preprocessing\n",
+    "\n",
+    "scaler =preprocessing.StandardScaler().fit(housing_data_plus_bias)\n",
+    "\n",
+    "scaled_housing_data_plus_bias = scaler.transform(housing_data_plus_bias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0 MSE = 10.6591\n",
+      "Epoch 100 MSE = 5.04315\n",
+      "Epoch 200 MSE = 4.93309\n",
+      "Epoch 300 MSE = 4.90303\n",
+      "Epoch 400 MSE = 4.881\n",
+      "Epoch 500 MSE = 4.86416\n",
+      "Epoch 600 MSE = 4.85121\n",
+      "Epoch 700 MSE = 4.84119\n",
+      "Epoch 800 MSE = 4.83341\n",
+      "Epoch 900 MSE = 4.82733\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_epochs = 1000\n",
+    "learning_rate = 0.01\n",
+    "\n",
+    "X = tf.constant(scaled_housing_data_plus_bias, dtype=tf.float32, name=\"X\")\n",
+    "y = tf.constant(housing.target.reshape(-1,1), dtype=tf.float32, name=\"y\")\n",
+    "theta = tf.Variable(tf.random_uniform([n + 1, 1], -1.0, 1.0), name=\"theta\") # random_uniform() generating a tensor containing random values\n",
+    "y_pred = tf.matmul(X, theta, name=\"prediction\")\n",
+    "error = y_pred - y\n",
+    "mse = tf.reduce_mean(tf.square(error), name=\"mse\")\n",
+    "gradients = 2/m * tf.matmul(tf.transpose(X), error)\n",
+    "training_op = tf.assign(theta, theta - learning_rate * gradients)\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    for epoch in range(n_epochs):\n",
+    "        if epoch % 100 == 0:\n",
+    "            print(\"Epoch\", epoch, \"MSE =\", mse.eval())\n",
+    "        sess.run(training_op)\n",
+    "    \n",
+    "    best_theta = theta.eval()   \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using autodiff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simply replcae the `gradients = ...` line in the Gradient Descent code in the previous section"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0 MSE = 8.41548\n",
+      "Epoch 100 MSE = 4.8767\n",
+      "Epoch 200 MSE = 4.82769\n",
+      "Epoch 300 MSE = 4.81986\n",
+      "Epoch 400 MSE = 4.81557\n",
+      "Epoch 500 MSE = 4.8125\n",
+      "Epoch 600 MSE = 4.81023\n",
+      "Epoch 700 MSE = 4.80854\n",
+      "Epoch 800 MSE = 4.80728\n",
+      "Epoch 900 MSE = 4.80634\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_epochs = 1000\n",
+    "learning_rate = 0.01\n",
+    "\n",
+    "X = tf.constant(scaled_housing_data_plus_bias, dtype=tf.float32, name=\"X\")\n",
+    "y = tf.constant(housing.target.reshape(-1,1), dtype=tf.float32, name=\"y\")\n",
+    "theta = tf.Variable(tf.random_uniform([n + 1, 1], -1.0, 1.0), name=\"theta\") # random_uniform() generating a tensor containing random values\n",
+    "y_pred = tf.matmul(X, theta, name=\"prediction\")\n",
+    "error = y_pred - y\n",
+    "mse = tf.reduce_mean(tf.square(error), name=\"mse\")\n",
+    "#gradients = 2/m * tf.matmul(tf.transpose(X), error)\n",
+    "gradients = tf.gradients(mse, [theta])[0]\n",
+    "training_op = tf.assign(theta, theta - learning_rate * gradients)\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    for epoch in range(n_epochs):\n",
+    "        if epoch % 100 == 0:\n",
+    "            print(\"Epoch\", epoch, \"MSE =\", mse.eval())\n",
+    "        sess.run(training_op)\n",
+    "    \n",
+    "    best_theta = theta.eval()   \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using an Optimizer\n",
+    "You can simply replace the preceding `gradients = ...` and `training_op = ...` lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0 MSE = 7.08913\n",
+      "Epoch 100 MSE = 52.0352\n",
+      "Epoch 200 MSE = 185.096\n",
+      "Epoch 300 MSE = 406.273\n",
+      "Epoch 400 MSE = 715.566\n",
+      "Epoch 500 MSE = 1112.98\n",
+      "Epoch 600 MSE = 1598.5\n",
+      "Epoch 700 MSE = 2172.14\n",
+      "Epoch 800 MSE = 2833.89\n",
+      "Epoch 900 MSE = 3583.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_epochs = 1000\n",
+    "learning_rate = 0.01\n",
+    "\n",
+    "X = tf.constant(scaled_housing_data_plus_bias, dtype=tf.float32, name=\"X\")\n",
+    "y = tf.constant(housing.target.reshape(-1,1), dtype=tf.float32, name=\"y\")\n",
+    "theta = tf.Variable(tf.random_uniform([n + 1, 1], -1.0, 1.0), name=\"theta\") # random_uniform() generating a tensor containing random values\n",
+    "y_pred = tf.matmul(X, theta, name=\"prediction\")\n",
+    "error = y_pred - y\n",
+    "mse = tf.reduce_mean(tf.square(error), name=\"mse\")\n",
+    "# gradients = 2/m * tf.matmul(tf.transpose(X), error)\n",
+    "# gradients = tf.gradients(mse, [theta])[0]\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate = learning_rate)\n",
+    "training_op = optimizer.minimize(mse)\n",
+    "training_op = tf.assign(theta, theta - learning_rate * gradients)\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    for epoch in range(n_epochs):\n",
+    "        if epoch % 100 == 0:\n",
+    "            print(\"Epoch\", epoch, \"MSE =\", mse.eval())\n",
+    "        sess.run(training_op)\n",
+    "    \n",
+    "    best_theta = theta.eval()   \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
