tensorflow-basics.ipynb added

--- a/tensorflow_basics.ipynb
+++ b/tensorflow_basics.ipynb
@@ -417,7 +417,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Normalize the feature vector: scaled_housing_data_plus_bias\n",
@@ -437,16 +439,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 MSE = 10.6591\n",
-      "Epoch 100 MSE = 5.04315\n",
-      "Epoch 200 MSE = 4.93309\n",
-      "Epoch 300 MSE = 4.90303\n",
-      "Epoch 400 MSE = 4.881\n",
-      "Epoch 500 MSE = 4.86416\n",
-      "Epoch 600 MSE = 4.85121\n",
-      "Epoch 700 MSE = 4.84119\n",
-      "Epoch 800 MSE = 4.83341\n",
-      "Epoch 900 MSE = 4.82733\n"
+      "Epoch 0 MSE = 6.09568\n",
+      "Epoch 100 MSE = 5.03491\n",
+      "Epoch 200 MSE = 4.96098\n",
+      "Epoch 300 MSE = 4.92778\n",
+      "Epoch 400 MSE = 4.90319\n",
+      "Epoch 500 MSE = 4.88385\n",
+      "Epoch 600 MSE = 4.86848\n",
+      "Epoch 700 MSE = 4.85622\n",
+      "Epoch 800 MSE = 4.84638\n",
+      "Epoch 900 MSE = 4.83847\n"
      ]
     }
    ],
@@ -500,16 +502,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 MSE = 8.41548\n",
-      "Epoch 100 MSE = 4.8767\n",
-      "Epoch 200 MSE = 4.82769\n",
-      "Epoch 300 MSE = 4.81986\n",
-      "Epoch 400 MSE = 4.81557\n",
-      "Epoch 500 MSE = 4.8125\n",
-      "Epoch 600 MSE = 4.81023\n",
-      "Epoch 700 MSE = 4.80854\n",
-      "Epoch 800 MSE = 4.80728\n",
-      "Epoch 900 MSE = 4.80634\n"
+      "Epoch 0 MSE = 7.07905\n",
+      "Epoch 100 MSE = 4.98361\n",
+      "Epoch 200 MSE = 4.92228\n",
+      "Epoch 300 MSE = 4.89142\n",
+      "Epoch 400 MSE = 4.86896\n",
+      "Epoch 500 MSE = 4.8524\n",
+      "Epoch 600 MSE = 4.84017\n",
+      "Epoch 700 MSE = 4.8311\n",
+      "Epoch 800 MSE = 4.82436\n",
+      "Epoch 900 MSE = 4.81932\n"
      ]
     }
    ],
@@ -558,16 +560,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 MSE = 7.08913\n",
-      "Epoch 100 MSE = 52.0352\n",
-      "Epoch 200 MSE = 185.096\n",
-      "Epoch 300 MSE = 406.273\n",
-      "Epoch 400 MSE = 715.566\n",
-      "Epoch 500 MSE = 1112.98\n",
-      "Epoch 600 MSE = 1598.5\n",
-      "Epoch 700 MSE = 2172.14\n",
-      "Epoch 800 MSE = 2833.89\n",
-      "Epoch 900 MSE = 3583.76\n"
+      "Epoch 0 MSE = 9.55318\n",
+      "Epoch 100 MSE = 4.88115\n",
+      "Epoch 200 MSE = 4.82529\n",
+      "Epoch 300 MSE = 4.81718\n",
+      "Epoch 400 MSE = 4.8132\n",
+      "Epoch 500 MSE = 4.81045\n",
+      "Epoch 600 MSE = 4.80848\n",
+      "Epoch 700 MSE = 4.80704\n",
+      "Epoch 800 MSE = 4.80601\n",
+      "Epoch 900 MSE = 4.80526\n"
      ]
     }
    ],
@@ -585,7 +587,7 @@
     "# gradients = tf.gradients(mse, [theta])[0]\n",
     "optimizer = tf.train.GradientDescentOptimizer(learning_rate = learning_rate)\n",
     "training_op = optimizer.minimize(mse)\n",
-    "training_op = tf.assign(theta, theta - learning_rate * gradients)\n",
+    "#training_op = tf.assign(theta, theta - learning_rate * gradients)\n",
     "\n",
     "init = tf.global_variables_initializer()\n",
     "\n",
@@ -599,6 +601,263 @@
     "    \n",
     "    best_theta = theta.eval()   \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feeding Data to the Training Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To implement Mni-batch GRadient Descent, you need a way to replcae X and y at every iteration with the next mini-batch. The placeholder nodes are used to pass the training data to TensorFlow during training. To create a placeholder node,\n",
+    "1. call the `placeholder()` function.\n",
+    "2. specify the output tensor's data type.\n",
+    "3. optionally, you can specify its shape, if you want to enforce it. `None` means \"any size.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6.  7.  8.]]\n",
+      "[[  9.  10.  11.]\n",
+      " [ 12.  13.  14.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = tf.placeholder(tf.float32, shape=(None, 3))\n",
+    "B = A + 5\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    B_val_1 = B.eval(feed_dict = {A:[[1,2,3]]})\n",
+    "    B_val_2 = B.eval(feed_dict = {A:[[4,5,6], [7,8,9]]})\n",
+    "    \n",
+    "    print(B_val_1)\n",
+    "    print(B_val_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def fetch_batch(epoch, batch_index, batch_size):\n",
+    "    np.random.seed(epoch * batch_index)\n",
+    "    batch_mark = np.random.choice(m, batch_size)\n",
+    "    X_batch = scaled_housing_data_plus_bias[batch_mark]\n",
+    "    y_batch = housing.target.reshape(-1,1)[batch_mark]\n",
+    "    return X_batch, y_batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n_epochs = 1000\n",
+    "learning_rate = 0.01\n",
+    "\n",
+    "# Changing the definition of X and y in the construction phase to make them placeholder nodes\n",
+    "\n",
+    "# X = tf.constant(scaled_housing_data_plus_bias, dtype=tf.float32, name=\"X\")\n",
+    "X = tf.placeholder(tf.float32, shape=(None, n+1), name=\"X\")\n",
+    "# y = tf.constant(housing.target.reshape(-1,1), dtype=tf.float32, name=\"y\")\n",
+    "y = tf.placeholder(tf.float32, shape=(None, 1), name=\"y\")\n",
+    "\n",
+    "theta = tf.Variable(tf.random_uniform([n + 1, 1], -1.0, 1.0), name=\"theta\") # random_uniform() generating a tensor containing random values\n",
+    "y_pred = tf.matmul(X, theta, name=\"prediction\")\n",
+    "error = y_pred - y\n",
+    "mse = tf.reduce_mean(tf.square(error), name=\"mse\")\n",
+    "\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate = learning_rate)\n",
+    "\n",
+    "training_op = optimizer.minimize(mse)\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "# define the batch size and compute the total number of batches \n",
+    "batch_size = 100\n",
+    "n_batches = int(np.ceil(m / batch_size))\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    for epoch in range(n_epochs):\n",
+    "        for batch_index in range(n_batches):\n",
+    "            # fetch the mini-batches one by one, then provide the value of X and y via the feed_dict parameter\n",
+    "            X_batch, y_batch = fetch_batch(epoch, batch_index, batch_size)\n",
+    "            sess.run(training_op, feed_dict={X: X_batch, y: y_batch})\n",
+    "    \n",
+    "    best_theta = theta.eval()   \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving and Restoring Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once you have trained your model, why should we save its parameters?\n",
+    "1. you can come back to it ewhenever you want.\n",
+    "2. using it in anotehr program.\n",
+    "3. comparing it to other models, and so on.\n",
+    "\n",
+    "Moreover, you can prevent from losing your parameters by saving checkpoints at regular intervals during training. So, how? Just create a `Saver` node at the end of the construction phase (after all variable nodes are created). then, in the execution phase, just call its `save()` method whenever you want to save the model, passing it the session and path of the checkpoint file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch  0 MSE =  4.27216\n",
+      "Epoch  100 MSE =  4.65465\n",
+      "Epoch  200 MSE =  5.03598\n",
+      "Epoch  300 MSE =  5.04383\n",
+      "Epoch  400 MSE =  4.51255\n",
+      "Epoch  500 MSE =  5.10193\n",
+      "Epoch  600 MSE =  4.6594\n",
+      "Epoch  700 MSE =  4.49823\n",
+      "Epoch  800 MSE =  4.84197\n",
+      "Epoch  900 MSE =  5.39028\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_epochs = 1000\n",
+    "learning_rate = 0.01\n",
+    "\n",
+    "X = tf.placeholder(tf.float32, shape=(None, n+1), name=\"X\")\n",
+    "y = tf.placeholder(tf.float32, shape=(None, 1), name=\"y\")\n",
+    "\n",
+    "theta = tf.Variable(tf.random_uniform([n + 1, 1], -1.0, 1.0), name=\"theta\") # random_uniform() generating a tensor containing random values\n",
+    "y_pred = tf.matmul(X, theta, name=\"prediction\")\n",
+    "error = y_pred - y\n",
+    "mse = tf.reduce_mean(tf.square(error), name=\"mse\")\n",
+    "\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate = learning_rate)\n",
+    "\n",
+    "training_op = optimizer.minimize(mse)\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "saver = tf.train.Saver()\n",
+    "# saver = tf.train.Saver({\"weights\": theta})\n",
+    "\n",
+    "batch_size = 100\n",
+    "n_batches = int(np.ceil(m / batch_size))\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    for epoch in range(n_epochs):\n",
+    "        for batch_index in range(n_batches):\n",
+    "            X_batch, y_batch = fetch_batch(epoch, batch_index, batch_size)\n",
+    "            _, mse_val = sess.run([training_op, mse], feed_dict={X: X_batch, y: y_batch})\n",
+    "        if epoch % 100 == 0: # checkpoint every 100 epochs\n",
+    "            save_path = saver.save(sess, \"./tmp/my_model.ckpt\")\n",
+    "            print(\"Epoch \", epoch, \"MSE = \", mse_val)\n",
+    "\n",
+    "# restoring your model\n",
+    "# with tf.Sesson() as sess:\n",
+    "    # saver.restore(sess, \"./tmp/my_model_final.ckpt\") \n",
+    "\n",
+    "    \n",
+    "    best_theta = theta.eval()\n",
+    "    save_path = saver.save(sess, \"./tmp/my_model_final.ckpt\")    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualizing the Graph and Training Curves Using TensorBoard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The TensorBoard nicely display interactive visulizations of some taining stats you feed in your webv browser (e.g., learning curves).\n",
+    "1. writes the graph definition and some training stats - the training error (MSE).\n",
+    "2. need to use a different log directory every time you run your program: include a timestamp in the log directory name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n_epochs = 1000\n",
+    "learning_rate = 0.01\n",
+    "\n",
+    "X = tf.placeholder(tf.float32, shape=(None, n+1), name=\"X\")\n",
+    "y = tf.placeholder(tf.float32, shape=(None, 1), name=\"y\")\n",
+    "\n",
+    "theta = tf.Variable(tf.random_uniform([n + 1, 1], -1.0, 1.0), name=\"theta\") # random_uniform() generating a tensor containing random values\n",
+    "y_pred = tf.matmul(X, theta, name=\"prediction\")\n",
+    "error = y_pred - y\n",
+    "mse = tf.reduce_mean(tf.square(error), name=\"mse\")\n",
+    "\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate = learning_rate)\n",
+    "\n",
+    "training_op = optimizer.minimize(mse)\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "saver = tf.train.Saver()\n",
+    "# saver = tf.train.Saver({\"weights\": theta})\n",
+    "\n",
+    "batch_size = 100\n",
+    "n_batches = int(np.ceil(m / batch_size))\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    for epoch in range(n_epochs):\n",
+    "        for batch_index in range(n_batches):\n",
+    "            X_batch, y_batch = fetch_batch(epoch, batch_index, batch_size)\n",
+    "            if epoch % 100 == 0: # checkpoint every 100 epochs\n",
+    "                save_path = saver.save(sess, \"./tmp/my_model.ckpt\")\n",
+    "                print(\"Epoch \", epoch, \"MSE = \", mse_val)\n",
+    "\n",
+    "# restoring your model\n",
+    "# with tf.Sesson() as sess:\n",
+    "    # saver.restore(sess, \"./tmp/my_model_final.ckpt\") \n",
+    "\n",
+    "    \n",
+    "    best_theta = theta.eval()\n",
+    "    save_path = saver.save(sess, \"./tmp/my_model_final.ckpt\")    "
    ]
   }
  ],
